<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RejestracjaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/podaj_dane"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_imie_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imie"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_nazwisko_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nazwisko"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_data_urodzenia_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_format"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_choose_date_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:text="@string/wybierz_dat_urodzenia" />

    <EditText
        android:id="@+id/et_mail_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_haslo_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/haslo"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/rejestracja" />

    <TextView
        android:id="@+id/tv_wynik_rejestracja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>