<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ZalogujActivity">

    <EditText
        android:id="@+id/et_mail_zaloguj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        />

    <EditText
        android:id="@+id/et_haslo_zaloguj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/haslo"/>

    <Button
        android:id="@+id/btn_zaloguj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="zaloguj"
        android:text="@string/zaloguj"/>
</LinearLayout>